--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     border: none;
     padding: 15PX 30PX;
 }
+
 /* nav related styles */
 nav{
     display: flex;
@@ -42,15 +43,67 @@ nav a{
  /* header related style */
  .header{
     background-color: #fff8f3;
+    background-image: url(images/header_bg.png);
+    background-size: 600px;
+    background-repeat: no-repeat;
+    background-position: bottom right;
  }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
-    align-items: center;
-    
+    align-items: center;   
+    justify-content: space-between;
 
+}
+.banner-content{
+    max-width: 500px;
 }
 .banner .profile-pic{
     width: 500px;
-    height: 380px;
+    /* height: 380px; */
+}
+.banner-greeting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+/* main section style */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+/* about section start here */
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #fff8f3;
+    margin: 120px 0 ;
+}
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-between;
+}
+.about-info{
+    text-align: center;
+}
+#do-section{
+    padding: 30px 150px;
 }
