--- a/style.css
+++ b/style.css
@@ -43,10 +43,10 @@ nav a{
  /* header related style */
  .header{
     background-color: #fff8f3;
-    background-image: url(images/header_bg.png);
+    background-image: url(images/header_bg.png), url(./images/developer.png);
     background-size: 600px;
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, top left;
  }
 .banner{
     padding: 30px 30px 0px 150px;
@@ -63,7 +63,7 @@ nav a{
     /* height: 380px; */
 }
 .banner-greeting{
-    font-size: 45px;
+    font-size: 35px;
     color: #474747;
     margin-bottom: 0;
 }
@@ -106,4 +106,76 @@ main{
 }
 #do-section{
     padding: 30px 150px;
+}
+.skills-container{
+    display: flex;
+    padding-bottom: 100px;
+    
+}
+.skill{
+    background: linear-gradient(30deg,rgb(255, 216, 171),#ffebdd);
+    justify-content: space-around;
+    padding:10px ;
+    margin: 5px;
+}
+.education{
+    font-size: 25px;
+    
+}
+.summary-container{
+    color:  #474747;
+   
+   
+}
+.section-title{
+    margin-bottom: 20px;
+
+}
+.resume{
+    display: flex;
+    padding-top: 30px;
+    gap: 20px;
+
+}
+.resume-title{
+    font-weight: 700;
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+.resume-institute{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.resume hr{
+    margin: 30px;
+}
+.education-experience{
+    padding:0 10px ;
+}    
+.download-cv{
+text-align: center;
+margin-top: 50px;
+
+}
+/* footer section start  */
+footer{
+    display: flex;
+    background: #ffe7d6;
+    gap:100px;
+    margin-top: 100px;
+    padding: 50PX 100PX;
+}
+.footer-column{
+    width: 50%;
+}
+.contact input[type="text"], .contact input[type="email"],
+textarea{
+    display: block;
+    margin-bottom: 20px;
+    padding: 18px 35px;
+    color: #757575;
+    background-color: white;
+    border-radius: 5px;
+    width: 100%;
+    border: 0;
 }
