--- a/style.css
+++ b/style.css
@@ -187,3 +187,52 @@ textarea{
 .social-link a{
     margin-right: 20px;
 }
+  /* media query */
+
+  /* mobile device */
+  .hide{
+    display: none;
+  }
+@media screen and (max-width:576px) {
+    nav{
+        flex-direction: column;
+    }
+    nav ul{
+        flex-direction: column;
+       gap: 10px;
+    }
+    .banner{
+        flex-direction: column;
+        padding:5px 5px 0px 65px;
+    }
+    .banner .profile-pic{
+        width: 100%;
+    }
+    .btn-primary{
+        margin: 20px;
+    }
+    .about{
+        padding: 15px;
+    }
+    .about-info-container{
+        flex-direction: column;
+    }
+    .skills-container{
+        flex-direction: column;
+    }
+    #do-section{
+        padding: 10px;
+    }
+    .resume{
+        flex-direction: column;
+    }
+    footer{
+        flex-direction: column;
+        padding: 10px;
+       gap: 20px;
+    
+    }
+    .footer-column{
+        width: 80%;
+    }
+}
